--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "buffer": "^6.0.3",
     "datetimepicker": "^0.1.39",
     "expo": "^49.0.9",
+    "expo-barcode-generator": "^4.0.0",
     "expo-linear-gradient": "~12.3.0",
     "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
