--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "^7.5.0",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-material/core": "^1.3.7",
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.8",
@@ -30,7 +30,7 @@
     "lodash.filter": "^4.6.0",
     "navigator": "^1.0.1",
     "react": "18.2.0",
-    "react-native": "0.72.4",
+    "react-native": "0.72.10",
     "react-native-animatable": "^1.3.3",
     "react-native-drawer-layout": "^3.2.1",
     "react-native-dropdown-picker": "^5.4.6",
